--- a/app/views/annons_listed.scala.html
+++ b/app/views/annons_listed.scala.html
@@ -18,7 +18,7 @@
             @if(annons.typ.equals("borttappat")){
                 <span class="label label-danger">Borttappat</span>
             }
-            <em>@annons.date</em>
+            <em>Lades in: @utilities.DateFormatter.format(annons.posted)</em>
             <br>
                 <div class="annons_text">
             @annons.text
