--- a/app/views/searchbar.scala.html
+++ b/app/views/searchbar.scala.html
@@ -1,35 +1,96 @@
-<nav class="navbar navbar-fixed-bottom navbar-light bg-faded" id="nav_bar_bottom">
+@(annonser: List[models.Annons], searchAnnonsForm: Form[SearchAnnons])(implicit messages: Messages)
 
+<nav class="navbar navbar-fixed-bottom navbar-light bg-faded" id="nav_bar_bottom">
+    @helper.form(action = routes.HomeController.search()) {
     <div class="collapse" id="exCollapsingNavbar">
         <div class="bg-inverse p-a-1">
 
             <!-- Collapsed content-->
             <div class="row" id="filter_panel">
+                <div class="col-xs-6">
+                    <fieldset class="form-group">
+                        <label for="typ">Typ</label>
+                        <small class="text-muted"></small>
+                        @helper.select(
+                            field = searchAnnonsForm("typ"),
+                            options = Seq(
+                                "Alla" -> "Alla",
+                                "borttappat" -> "Borttappat",
+                                "upphittat" -> "Upphittat"
+                            ),
+                            'default -> "Välj typ",
+                            'class -> "c-select",
+                            '_label -> null
+                        )
+                    </fieldset>
+                </div>
+
                 <div class="col-xs-3">
                     <div class="input-group">
 
-                        <span>Borttappat</span> &nbsp; <input type="checkbox" id="borttappat_checkbox">
+                            <!-- Kategori -->
+                        <fieldset class="form-group">
+                            <label for="category">Kategori</label>
+                            @helper.select(
+                                field = searchAnnonsForm("category"),
+                                options = Seq(
+                                    "Alla" -> "Alla",
+                                    "Annat" -> "Annat",
+                                    "Djur" -> "Djur",
+                                    "Kläder" -> "Kläder",
+                                    "Klocka" -> "Klocka",
+                                    "Väska" -> "Väska",
+                                    "Glasögon" -> "Glasögon",
+                                    "Nycklar" -> "Nycklar",
+                                    "ID/Kort" -> "ID/Kort",
+                                    "Mobiltelefon" -> "Mobiltelefon",
+                                    "Dator" -> "Dator",
+                                    "Fordon" -> "Fordon"
+                                ),
+                                'default -> "Välj kategori",
+                                '_label -> null,
+                                'class -> "form-control"
+                            )
+                        </fieldset>
 
                     </div>
                 </div>
                 <div class="col-xs-3">
-                    <div class="input-group">
 
-                        <span>Upphittat</span> &nbsp; <input type="checkbox" id="upphittat_checkbox">
-
-
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="input-group">
-
-                        Kategori
-
-                    </div>
-                </div>
-                <div class="col-xs-3">
-
-                    Län
+                    <fieldset class="form-group">
+                        <label for="county">Län</label>
+                        @helper.select(
+                            field = searchAnnonsForm("county"),
+                            options = Seq(
+                                "Alla" -> "Alla",
+                                "Blekinge län" -> "Blekinge län",
+                                "Dalarnas län" -> "Dalarnas län",
+                                "Gotlands län" -> "Gotlands län",
+                                "Gävleborgs län" -> "Gävleborgs län",
+                                "Hallands län" -> "Hallands län",
+                                "Jämtlands län" -> "Jämtlands län",
+                                "Jönköpings län" -> "Jönköpings län",
+                                "Kalmar län" -> "Kalmar län",
+                                "Kronobergs län" -> "Kronobergs län",
+                                "Norrbottens län" -> "Norrbottens län",
+                                "Skåne län" -> "Skåne län",
+                                "Stockholms län" -> "Stockholms län",
+                                "Södermanlands län" -> "Södermanlands län",
+                                "Uppsala län" -> "Uppsala län",
+                                "Värmlands län" -> "Värmlands län",
+                                "Västerbottens län" -> "Västerbottens län",
+                                "Västernorrlands län" -> "Västernorrlands län",
+                                "Västmanlands län" -> "Västmanlands län",
+                                "Västra Götalands län" -> "Västra Götalands län",
+                                "Örebro län" -> "Örebro län",
+                                "Östergötlands län" -> "Östergötlands län"
+                            ),
+                            'default -> "Välj län",
+                            '_label -> null,
+                            'class -> "form-control",
+                            'id -> "county"
+                        )
+                    </fieldset>
 
                 </div>
 
@@ -38,16 +99,43 @@
         </div>
     </div>
 
-    <!-- Button for collapse -->
+    <div class="row">
+        <div class="col-xs-5">
+            <div class="input-group">
+                    <!-- Button for collapse -->
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                <span id="filter_text">Filtrera &#9776;</span>
-        </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <span id="filter_text">Filtrera &#9776;</span>
+                </button>
+
+            </div>
+        </div>
+        <div class="col-xs-6">
+            @*
+            <div class="input-group">
+
+                        <button class="btn btn-warning"><i class="fa fa-globe"></i>Toggle</button>
+
+            </div>
+            *@
+        </div>
+        <div class="col-xs-3">
+            <span id="matches_text">Träffar: @annonser.length</span>
+        </div>
+    </div>
+
+
+
 
     <!-- Search input -->
-    <form>
-        <input type="text" placeholder="Sök..." class="form-control">
+    <div class="input-group">
+     @helper.inputText(searchAnnonsForm("search_string"), 'placeholder -> "Sök...", 'class -> "form-control", '_label -> null, 'maxlength -> 40)
 
-    </form>
+        <span class="input-group-btn">
+            <button class="btn btn-secondary" type="submit">Go!</button>
+        </span>
+    </div>
+
+    }
 </nav>
 
