--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,7 +12,7 @@
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta name="description" content="Din site för borttappade och hittade objekt!">
 
         <script type="text/javascript" src="@routes.HomeController.javascriptRoutes"></script>
 
