Fixed image source when displaying uploaded image in form.

--- a/app/views/lagg_till_annons.scala.html
+++ b/app/views/lagg_till_annons.scala.html
@@ -13,7 +13,7 @@ defer></script>
 
 
     @main("Skapa annons") {
-
+        <div hidden id="environmentPath">@dao.AppStringResources.imagepath</div>
 
         @helper.form(action = routes.HomeController.postAnnons(), 'id -> "annons_form") {
             <div id="form_panel">
