Fixed paths in info boxes.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,6 +17,8 @@ defer></script>
 
 @main("Annonser") {
 
+    <div hidden id="environmentPath">@dao.AppStringResources.imagepath</div>
+
     <div id="index_views">
         <div class="row" id="mapView" style="display: none">
             <div class="col-xs-1">
