--- a/app/views/annons.scala.html
+++ b/app/views/annons.scala.html
@@ -15,7 +15,7 @@ defer></script>
     <script src="@routes.Assets.versioned("javascripts/browserified/annons.js")" type="text/javascript" defer></script>
 }
 
-@main("Annons") {
+@main("Tbax - Annons") {
     <div id="annons_outside">
         <div id="annons">
             <div class="row">
