--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -15,9 +15,10 @@ defer></script>
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/google_maps.css")">
 
 
-@main("Annonser") {
+@main("Tbax - Annonser") {
 
     <div hidden id="environmentPath">@dao.AppStringResources.imagepath</div>
+
 
     <div id="index_views">
         <div class="row" id="mapView" style="display: none">
