--- a/app/views/lagg_till_annons.scala.html
+++ b/app/views/lagg_till_annons.scala.html
@@ -12,7 +12,7 @@ defer></script>
 
 
 
-    @main("Skapa annons") {
+    @main("Tbax - Skapa annons") {
         <div hidden id="environmentPath">@dao.AppStringResources.imagepath</div>
 
         @helper.form(action = routes.HomeController.postAnnons(), 'id -> "annons_form") {
